--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,3 @@
-
 {
   "name": "ENT Report Pro AI",
   "short_name": "ENT Pro",
@@ -9,7 +8,7 @@
   "theme_color": "#1e3a8a",
   "icons": [
     {
-      "src": "data:image/svg+xml,%3Csvg width='512' height='512' viewBox='0 0 512 512' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='512' height='512' rx='110' fill='url(%23g)'/%3E%3Cpath d='M256 120V392M120 256H392' stroke='white' stroke-width='65' stroke-linecap='round'/%3E%3Ccircle cx='256' cy='256' r='55' fill='%231E3A8A' stroke='white' stroke-width='15'/%3E%3Ccircle cx='275' cy='237' r='12' fill='white' fill-opacity='0.7'/%3E%3Cdefs%3E%3ClinearGradient id='g' x1='0' y1='0' x2='512' y2='512' gradientUnits='userSpaceOnUse'%3E%3Cstop stop-color='%233B82F6'/%3E%3Cstop offset='1' stop-color='%231E3A8A'/%3E%3C/linearGradient%3E%3C/defs%3E%3C/svg%3E",
+      "src": "icon.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
       "purpose": "any maskable"
