--- a/manifest.json
+++ b/manifest.json
@@ -8,10 +8,16 @@
   "theme_color": "#1e3a8a",
   "icons": [
     {
-      "src": "icon.svg",
+      "src": "./icon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
+      "src": "./icon.svg",
       "sizes": "512x512",
       "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "purpose": "maskable"
     }
   ]
 }
